test/compile-fail/struct-immutable-member.as
struct Box { value: int }
let a = Box(10);
a.value = 340; // error
